# rust-api

./: .env.example  Cargo.toml
src/: main.rs
src/configs/: env_config.rs
src/handlers/: login_handler.rs  mod.rs  register_handler.rs
src/handlers/auth/: login_handler.rs  register_handler.rs
src/routes/: auth.rs  mod.rs  routers.rs
src/routes/auth/: login.rs  register.rs
src/schemas/auth/: login_schema.rs  mod.rs  register_schema.rs
src/utils/: graceful_shutdown.rs  mod.rs  validation_error.rs
