[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
dotenv = "0.15.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio =  { version = "1.42.0", features = ["full"] }
