[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-web-httpauth = "0.8.2"
chrono = "0.4.39"
chrono-tz = "0.10.0"
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.22"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio =  { version = "1.42.0", features = ["full"] }
validator = { version = "0.19.0", features = ["derive"] }
